tests/invalid/struct_with_default_field_value.vert.hlsl
struct MyStruct
{
    float4 a = 1.0f;
};

void main()
{
    
}
